k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-dashboard
  template:
    metadata:
      labels:
        app: stock-dashboard
    spec:
      containers:
      - name: stock-dashboard
        image: ghcr.io/gunayshuaib/stock-dashboard:latest
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
      imagePullSecrets:
      - name: ghcr-secret
