k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-dashboard
spec:
  selector:
    app: stock-dashboard
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
